build script rework