@@ -2,8 +2,8 @@ import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
 
 plugins {
     id("java")
-    id("org.jetbrains.intellij") version "1.7.0" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
-    id("com.github.ben-manes.versions") version "0.42.0" // https://github.com/ben-manes/gradle-versions-plugin
+    id("org.jetbrains.intellij") version "1.10.0" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
+    id("com.github.ben-manes.versions") version "0.44.0" // https://github.com/ben-manes/gradle-versions-plugin
 }
 
 // Import variables from gradle.properties file
@@ -73,16 +73,7 @@ tasks {
     runIde {
         jvmArgs("-Xms128m")
         jvmArgs("-Xmx1024m")
-        jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
-        // copy over some JVM args from IntelliJ
-        jvmArgs("-Dide.no.platform.update=true")
-        jvmArgs("-Djdk.attach.allowAttachSelf=true")
-        jvmArgs("-Djdk.module.illegalAccess.silent=true")
-        jvmArgs("-Dsun.io.useCanonCaches=false")
-        jvmArgs("-XX:+UseG1GC")
-        jvmArgs("-XX:CICompilerCount=2")
-        jvmArgs("-XX:ReservedCodeCacheSize=512m")
-        jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
+        jvmArgs("--add-exports", "java.desktop/sun.awt.windows=ALL-UNNAMED")
     }
     buildSearchableOptions {
         enabled = pluginEnableBuildSearchableOptions.toBoolean()
